[SELC-8118] Using springdoc in new SwaggerConfig